# Baby-s_36_Skills

./: .gitignore  CMakeLists.txt  ReadMe.md  buildToAndroidWithDebugMode.bat  buildToAndroidWithReleaseMode.bat  buildToWin32WithDebugMode.bat  buildToWin32WithReleaseMode.bat  openServer.bat  runInAndroidWithReleaseMode.bat  runToAndroidWithDebugMode.bat  清除所有历史版本以减少仓库大小.bat
Classes/: AppDelegate.cpp  AppDelegate.h  Connect.cpp  Connect.h  ConnectServerScene.cpp  ConnectServerScene.h  CreateRoomScene.cpp  CreateRoomScene.h  GameInterface.rar  GetRoomsScene.cpp  GetRoomsScene.h  HelloWorldScene.cpp  HelloWorldScene.h  HttpTest.cpp  HttpTest.h  JoinRoomScene.cpp  JoinRoomScene.h  NetworkBaseScene.cpp  NetworkBaseScene.h  NetworkGameOverScene.cpp  NetworkGameOverScene.h  NetworkGameScene.cpp  NetworkGameScene.h  NetworkScene.cpp  NetworkScene.h  QCC.cpp  QCC.h  QE.h  RoomInfo.cpp  RoomInfo.h  SelectRoleScene.cpp  SelectRoleScene.h  SelectRoomsScene.cpp  SelectRoomsScene.h  SignInScene.cpp  SignInScene.h  SignInSceneTest.cpp  SignInSceneTest.h  SignUpScene.cpp  SignUpScene.h  (+9 more)
Classes/GameInterface/: GameInterfaceScene.cpp  GameInterfaceScene.h  InterNet.cpp  InterNet.h  LogoScene.cpp  LogoScene.h  MapFive.cpp  MapFive.h  MapFour.cpp  MapFour.h  MapOne.cpp  MapOne.h  MapThere.cpp  MapThere.h  MapTwo.cpp  MapTwo.h  ResourceLoadScene.cpp  ResourceLoadScene.h  begin.cpp  begin.h  star.cpp  star.h
Classes/NetWorkGame/ConnectServer/: ConnectServerScene.cpp  ConnectServerScene.h
Classes/NetWorkGame/NetworkBase/: Connect.cpp  Connect.h  NetworkBaseScene.cpp
Classes/NetWorkGame/NetworkGame/: NetworkGameOverScene.cpp  NetworkGameOverScene.h  NetworkGameScene.cpp  NetworkGameScene.h  SelectRoleScene.cpp  SelectRoleScene.h  WaitingNetworkGameScene.cpp  WaitingNetworkGameScene.h
Classes/NetWorkGame/SelectRooms/: CreateRoomScene.cpp  GetRoomsScene.cpp  GetRoomsScene.h  JoinRoomScene.cpp  JoinRoomScene.h  RoomsInfo.cpp  RoomsInfo.h
Classes/NetWorkGame/SignIn/: SignInScene.cpp
Classes/NetWorkGame/SignUp/: SignUpScene.cpp
Classes/QE/: QAnimate.h  QCharsetConvert.cpp  QCharsetConvert.h  QJson.cpp  QJson.h  QMenu.cpp  QMenu.h  QObject.cpp  QObject.h  QTMX.h
Classes/QuickEngine/: QAnimate.cpp  QAnimate.h  QDesignMode.h  QEditBox.cpp  QEditBox.h  QFileUtils.h  QJson.cpp  QJson.h  QLayer.h  QMenu.cpp  QMenu.h  QMessageBox.cpp  QMessageBox.h  QObject.cpp  QObject.h  QScene.cpp  QScene.h  QSprite.cpp  QSprite.h  QString.cpp  QString.h  QTMX.cpp  QTMX.h  QType.h  QuickEngine.h
Classes/SingleGame/: AppDelegate.cpp  AppDelegate.h  Battle.cpp  Battle.h  Battre.cpp  Battre.h  DataParse.cpp  DataParse.h  HRocker.cpp  HRocker.h  MapFive.cpp  MapFive.h  MapFour.cpp  MapFour.h  MapOne.cpp  MapOne.h  MapThere.cpp  MapThere.h  MapTwo.cpp  MapTwo.h  animation.cpp  animation.h
Classes/Test/: HelloWorldScene.cpp  HelloWorldScene.h  HttpTest.h  PopAlertDialog.cpp  PopAlertDialog.h  SignInSceneTest.cpp  SignInSceneTest.h  SocketIOTestLayer.cpp  SocketIOTestLayer.h  WebSocketTestLayer.h
Resources/: Data.json  MYMAP1.TMX  MapTwo.tmx  Mymap.tmx  buddy_1.plist  enermy_1.plist  enermy_2.plist  enermy_3.plist  enermy_4.plist  flower.plist  hosp.tmx  hudie.plist  mainMap.tmx  school.tmx  shop.tmx  text.xml  walk.plist  zoo.tmx
Resources/GetRoomsScene/: 卡片.psd
Resources/fonts/: fnt8.fnt
Resources/联网界面-孔孟伟/: 服务器IP界面.psd
Server/: .gitignore  app.js  baby's 36 skills.sql  createRoom.js  db.js  dialog.js  getRooms.js  joinRoom.js  package-lock.json  required.txt  selectRole.js  signIn.js  signUp.js  waiting.js  websocketApp.js
Server/test/: SocketApp.js  http_server.js  ws.js
proj.android/: gradle.properties  settings.gradle
proj.android/app/: .gitignore  AndroidManifest.xml  build.gradle  gradle.properties
proj.android/app/res/values/: strings.xml
proj.android/key/: android.keystore  createKey.txt
proj.win32/: .gitignore  Baby's_36_Skills.sln  Baby's_36_Skills.vcxproj  Baby's_36_Skills.vcxproj.filters  Baby_s_36_Skills.sln  Baby_s_36_Skills.vcxproj  Baby_s_36_Skills.vcxproj.filters  Client.sln  Client.vcxproj  Client.vcxproj.filters  game.aps
